# cmc-support-pet-project

./: .env.example  README.md  backendai.py  model.py  pyproject.toml
ai_config/: context.txt
data/: prompts.py  sysprompt.txt
petproject/: backendai.py  config.py  context.py  main.py  model.py  prompts.py  schemas.py
